# gradio-floating-chatbot

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  example.py  pyproject.toml
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/workflows/: release.yml
src/gradio_floating_chatbot/: __init__.py  css.py  floating_chatbot.py  main.py
tests/: test_config.py  test_layout_logic.py
